# koi

./: .gitignore  README.md
client/: .env  .eslintrc.cjs  index.html  package.json  pnpm-lock.yaml
client/src/: Koi.tsx  Main.tsx  main.tsx
client/src/common/: globals.ts  utils.tsx
client/src/common/topnav/: index.tsx
client/src/components/: feedback-info-block.tsx
client/src/components/feedback-table/: index.tsx
client/src/components/header/: index.tsx
client/src/features/dashboard/: feedback-table.tsx  index.tsx  project-selector.tsx
client/src/features/landing/: api.ts  landing.tsx
client/src/features/landing/forms/: login.tsx  register.tsx
client/src/features/profile/: api.ts
client/src/features/project/: api.ts  index.tsx
client/src/features/project/components/: feedback-info-block.tsx
client/src/features/project/components/feedback-form-example/: examples.ts  form.tsx
client/src/features/project/components/feedback-table/: feedback-table.tsx
client/src/features/project/components/header/: create-project-modal.tsx  header.tsx
client/src/features/project/components/help-page/: help-page.tsx
client/src/features/project/components/project-settings/: project-settings.tsx
client/src/features/project/components/project-settings/modals/: add-user.tsx
client/src/interfaces/: feedback.ts  profile.ts  project.ts
client/src/router/: index.ts
client/src/screens/landing/: landing.tsx
client/src/screens/landing/forms/: login.tsx  register.tsx
client/src/screens/project/: index.tsx
client/src/state/: session.ts
client/src/store.ts/: index.ts
server/: .env  Cargo.toml  Dockerfile  README.MD  dbmate.sh  docker-compose.yml  sqlx-data.json
server/src/: main.rs  openapi.rs
server/src/common/: mod.rs
server/src/db/: schema.sql  sqlite.rs
server/src/db/migrations/: 20221002055707_init_tables.sql
server/src/feedback/: error.rs  model.rs  repo.rs  service.rs
server/src/feedback/repo/: mod.rs  postgres.rs  sqlite.rs
server/src/http/: auth.rs
server/src/profile/: model.rs  repo.rs  service.rs
server/src/project/: error.rs  mod.rs  model.rs  repo.rs  service.rs
server/src/project/repo/: mod.rs  postgres.rs  sqlite.rs
server/src/sessions/: mod.rs  postgres.rs  sqlite.rs  stretto.rs
server/src/users/: model.rs  repo.rs  service.rs
server/src/users/repo/: mod.rs  postgres.rs  sqlite.rs
