[package]
name = "koi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
chrono = { version = "0.4.22", features = ["serde"] }
nanoid = "0.4.0"
rusqlite = { version = "0.28.0", features = ["bundled", "chrono", "serde_json", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.0", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors", "tracing", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
uuid = "1.1.2"
